--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,1 +1,15 @@
 @import "tailwindcss";
+
+*{
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+}
+
+section{
+    padding: 40px;
+}
+
+main{
+    min-height: 100vh;
+}
