--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -22,6 +22,11 @@ section{
 }
 
 main{
+    width: screen;
     min-height: 100vh;
     background-color: #F0F6FF;
+}
+
+.mirror {
+    transform: scaleX(-1);
 }
