--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -10,6 +10,7 @@
     --color-DarkTeal: #124E66;
     --color-SteelBlue: #748D92;
     --color-LightGray: #D3D9D4;
+    --color-rojo-error: #A31D1D;
 }
 
 *{
@@ -28,9 +29,9 @@ section{
 
 main{
     width: screen;
-    min-height: 100vh;
 }
 
 .mirror {
     transform: scaleX(-1);
 }
+  
