--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -35,3 +35,18 @@ main{
     transform: scaleX(-1);
 }
   
+.p-button{
+    background-color: #124E66 !important;
+    border: none !important;
+    color: white !important;
+}
+
+.p-button:hover{
+    background-color: #2E3944 !important;
+}
+
+.p-paginator-page-selected{
+    background: linear-gradient(to bottom, #124E66, #212A31) !important;
+    color: white !important;
+
+}
